--- a/css/styles.css
+++ b/css/styles.css
@@ -1,41 +1,7 @@
 body {
-  font-family: "Roboto", "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #212121;
 }
-li {
-  list-style-type: none;
-}
-/* header */
-.header {
-  background-color: #ffffff;
-}
-.logo {
-  color: #000000;
-}
-.logo .logo-web {
-  color: #2196f3;
-}
-.header-nav {
-  color: #212121;
-}
-.header-nav:hover,
-.header-nav:focus {
-  color: #2196f3;
-}
-.header-address {
-  color: #757575;
-}
-.header-address:hover,
-.header-address:focus {
-  color: #2196f3;
-}
-/* footer */
-.footer {
-  background-color: #2f303a;
-}
-.logo-footer {
-  color: #ffffff;
-}
-.logo-footer .logo-web {
-  color: #2196f3;
+.list {
+  list-style: none;
 }
